<?xml version="1.0"?>
<package format="2">
  <name>gnss_nmea0183_ros_driver</name>
  <version>0.0.0</version>
  <description>The gnss_nmea0183_ros_driver package</description>

  <maintainer email="ryoga@todo.todo">Ryoga Sato</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
